--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#inicio" class="flex items-center">
-                    <img src="1000176834.jpg" alt="Logo de Inovíxe" class="h-10 w-auto">
+                    <img src="logo.webp" alt="Logo de Inovíxe" class="h-10 w-auto">
                 </a>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
