--- a/index.html
+++ b/index.html
@@ -194,11 +194,10 @@
             <div class="container mx-auto px-6 py-12 lg:py-24">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white leading-tight fade-in-up">
-                        Transformamos tu Negocio con <span class="text-inovixe-blue">Inteligencia Artificial</span> y Marketing Innovador
+                        Transformamos tu empresa con <span class="text-inovixe-blue">Inteligencia Artificial</span> y Marketing Innovador
                     </h1>
                     <p class="mt-6 text-lg sm:text-xl text-gray-400 max-w-2xl mx-auto fade-in-up" style="transition-delay: 0.2s;">
-                        El mayor activo de tu empresa es la integración de IA y Marketing Digital para automatizar procesos, captar clientes y escalar ventas.
-                    </p>
+                        La clave del éxito radica en combinar IA con marketing para optimizar operaciones, atraer leads cualificados y multiplicar ingresos de forma sostenible.
                     <div class="mt-12 fade-in-up" style="transition-delay: 0.4s;">
                         <a href="#contacto" class="btn-cta bg-inovixe-blue text-white text-lg hover:bg-inovixe-blue/90">Solicita una Consulta Gratuita</a>
                     </div>
@@ -214,38 +213,32 @@
                     <!-- Servicio 1 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6l12-3v16M9 19h12M9 19a3 3 0 01-6 0v-5a3 3 0 016 0m-3-10v10m-3-10V6a3 3 0 116 0v1a3 3 0 11-6 0z"></path></svg>
-                        <h3 class="font-bold text-xl mb-2">Automatizaciones de Procesos</h3>
-                        <p class="text-gray-400 text-center">Reducimos costes y tiempo con IA.</p>
+                        <h3 class="font-bold text-xl mb-2">Automatizaciones de procesos</h3>
+                        <p class="text-gray-400 text-center">Mejoramos la eficiencia operativa con IA para minimizar gastos y acelerar tareas diarias.</p>
                     </div>
                     <!-- Servicio 2 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.1s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-4l-4 4v-4z"></path></svg>
-                        <h3 class="font-bold text-xl mb-2">Agentes para WhatsApp y Voz</h3>
-                        <p class="text-gray-400 text-center">Chatbots y agentes autónomos para atención 24/7.</p>
+                        <h3 class="font-bold text-xl mb-2">Agentes de inteligencia artificial WhatsApp, redes sociales y llamadas</h3>
+                        <p class="text-gray-400 text-center">Sistemas inteligentes que ofrecen soporte continuo y mejoran la interacción con clientes en todo momento.</p>
                     </div>
                     <!-- Servicio 3 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.2s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10l-2 1m0 0l-2-1m2 1v2.5M12 13V9m2 2h-4m2 2h4m2 2h-4m2 2h-4m2 2h-4"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Campañas en Meta y Publicidad Online</h3>
-                        <p class="text-gray-400 text-center">Estrategias de ads digitales para atraer leads.</p>
+                        <p class="text-gray-400 text-center">Campañas digitales precisas que generan tráfico cualificado y potencian la adquisición de clientes.</p>
                     </div>
                     <!-- Servicio 4 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.3s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        <h3 class="font-bold text-xl mb-2">Funnels de Venta Automatizados</h3>
-                        <p class="text-gray-400 text-center">Embudos que guían al cliente desde lead a compra.</p>
+                        <h3 class="font-bold text-xl mb-2">Funnels de venta automatizados</h3>
+                        <p class="text-gray-400 text-center">Rutas de conversión inteligentes que convierten visitantes en clientes leales de manera automatizada.</p>
                     </div>
                     <!-- Servicio 5 -->
-                    <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.4s;">
-                        <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-4m-2 4a2 2 0 11-4 0m4 0h4m2 0a2 2 0 114 0m-4 0h4m4 0a2 2 0 114 0m-4 0h4M3 8a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2H5a2 2 0 01-2-2V8z"></path></svg>
-                        <h3 class="font-bold text-xl mb-2">Desarrollo de Estrategias con IA</h3>
-                        <p class="text-gray-400 text-center">Análisis y optimización para crecimiento.</p>
-                    </div>
-                    <!-- Servicio 6 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.5s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.467 9.5 5.253 8 5.253S5.168 5.467 4 6.253v13m8-13c1.168.786 2.5 1 4 1s2.832-.214 4-1m0 0v13m-4-13c-.786.167-1.554.25-2.253.253C11.56 5.253 10.832 5.467 10 6.253v13m0 0c.786-.167 1.554-.25 2.253-.253c1.168-.786 2.5-1 4-1s2.832.214 4 1m0 0V6.253"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Consultoría Empresarial</h3>
-                        <p class="text-gray-400 text-center">Evaluaciones de viabilidad y ROI con IA.</p>
+                        <p class="text-gray-400 text-center">Asesoramiento experto en integración de IA para evaluar oportunidades y maximizar el retorno.</p>
                     </div>
                 </div>
             </div>
