--- a/index.html
+++ b/index.html
@@ -244,73 +244,28 @@
             </div>
         </section>
 
-        <!-- Sección Máquina de Ventas -->
-        <section class="py-16 md:py-24 bg-black-transparent tech-bg">
-            <div class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-12">
-                <div class="lg:w-1/2 text-center lg:text-left fade-in-up">
-                    <h2 class="section-title text-center lg:text-left mb-8">La Máquina de Ventas Predecible 24/7</h2>
-                    <p class="text-gray-300 text-lg mb-6">
-                        Inspirada en el éxito de los modelos de negocio más rentables, nuestra 'Máquina de Ventas Predecible' está diseñada para operar sin descanso.
-                    </p>
-                    <p class="text-gray-300 mb-6">
-                        Utilizamos **Inteligencia Artificial** para identificar y nutrir oportunidades, optimizar cada paso del funnel de conversión y generar un flujo constante de clientes y retornos crecientes para tu empresa.
-                    </p>
-                    <p class="text-gray-300">
-                        Es un sistema integrado que combina **automatización de procesos, agentes autónomos y publicidad digital** para que tu negocio sea omnipresente y altamente eficiente.
-                    </p>
-                </div>
-                <div class="lg:w-1/2 flex justify-center fade-in-up" style="transition-delay: 0.2s;">
-                    <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Máquina+de+Ventas" alt="Diagrama de máquina de ventas" class="rounded-xl shadow-2xl max-w-full h-auto border border-inovixe-blue">
-                </div>
-            </div>
-        </section>
-
         <!-- Sección Desafíos a Oportunidades -->
         <section class="py-16 md:py-24 bg-black-transparent">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades</h2>
                 <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
-                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inovíxe, convertimos esos problemas en oportunidades de escalabilidad.
+                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, transformamos estos retos en vías para un crecimiento ilimitado.
                 </p>
                 <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
                     <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
                         <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c1.657 0 3 .895 3 2s-1.343 2-3 2-3-.895-3-2 .895-2 3-2zM12 21a9 9 0 100-18 9 9 0 000 18z"></path></svg>
                         <h4 class="font-bold text-xl">Problema: Techo de Crecimiento</h4>
-                        <p class="text-gray-400 mt-2">Dependencia del factor humano.</p>
+                        <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos.</p>
                     </div>
                     <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
                         <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
                         <h4 class="font-bold text-xl">Solución: Escala Ilimitada</h4>
-                        <p class="text-gray-400 mt-2">Automatización y asistentes virtuales.</p>
+                        <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales para escalar sin límites.</p>
                     </div>
                     <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
                         <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 01-9-9c0-1.026.15-2.02.438-2.964m1.528 2.064c.26-.59.57-1.15.914-1.688m-2.906 1.688A9 9 0 0121 12c0 1.026-.15 2.02-.438 2.964m-1.528-2.064c-.26.59-.57 1.15-.914 1.688"></path></svg>
-                        <h4 class="font-bold text-xl">Resultado: Omnipresencia</h4>
-                        <p class="text-gray-400 mt-2">Marketing y ventas automatizadas 24/7.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Sección 'Para Quién' -->
-        <section class="py-16 md:py-24 bg-black-transparent">
-            <div class="container mx-auto px-6 text-center">
-                <h2 class="section-title text-center mb-12 fade-in-up">¿Para Quién es Inovíxe?</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="card p-6 rounded-xl flex flex-col items-center flex-1 fade-in-up">
-                        <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c1.657 0 3 .895 3 2s-1.343 2-3 2-3-.895-3-2 .895-2 3-2zM12 21a9 9 0 100-18 9 9 0 000 18z"></path></svg>
-                        <h4 class="font-bold text-xl mb-2">Dueños de Negocios</h4>
-                        <p class="text-gray-400 text-center">Que se enfrentan a límites de escalabilidad y buscan automatizar para crecer.</p>
-                    </div>
-                    <div class="card p-6 rounded-xl flex flex-col items-center flex-1 fade-in-up" style="transition-delay: 0.2s;">
-                        <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        <h4 class="font-bold text-xl mb-2">Empresas en Búsqueda de Crecimiento</h4>
-                        <p class="text-gray-400 text-center">Que quieren implementar estrategias rentables y sostenibles a largo plazo.</p>
-                    </div>
-                    <div class="card p-6 rounded-xl flex flex-col items-center flex-1 fade-in-up" style="transition-delay: 0.4s;">
-                        <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
-                        <h4 class="font-bold text-xl mb-2">PYMES Innovadoras</h4>
-                        <p class="text-gray-400 text-center">Que desean integrar IA en sus procesos de marketing y ventas.</p>
+                        <h4 class="font-bold text-xl">Resultado: Presencia Constante</h4>
+                        <p class="text-gray-400 mt-2">Estrategias de marketing y ventas que operan sin interrupciones..</p>
                     </div>
                 </div>
             </div>
