--- a/index.html
+++ b/index.html
@@ -270,33 +270,33 @@
             </div>
         </section>
 
-        <!-- Sección Desafíos a Oportunidades -->
+    <!-- Sección Desafíos a Oportunidades -->
         <section class="py-16 md:py-24 bg-black-transparent">
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades</h2>
                 <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
-                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, transformamos estos retos en vías para un crecimiento ilimitado.
+                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inovíxe, transformamos estos retos en vías para un crecimiento ilimitado.
                 </p>
                 <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
                     <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c1.657 0 3 .895 3 2s-1.343 2-3 2-3-.895-3-2 .895-2 3-2zM12 21a9 9 0 100-18 9 9 0 000 18z"></path></svg>
+                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <h4 class="font-bold text-xl">Problema: Techo de Crecimiento</h4>
                         <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos.</p>
                     </div>
                     <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941"></path></svg>
                         <h4 class="font-bold text-xl">Solución: Escala Ilimitada</h4>
                         <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales para escalar sin límites.</p>
                     </div>
                     <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 21a9 9 0 01-9-9c0-1.026.15-2.02.438-2.964m1.528 2.064c.26-.59.57-1.15.914-1.688m-2.906 1.688A9 9 0 0121 12c0 1.026-.15 2.02-.438 2.964m-1.528-2.064c-.26.59-.57 1.15-.914 1.688"></path></svg>
+                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                         <h4 class="font-bold text-xl">Resultado: Presencia Constante</h4>
-                        <p class="text-gray-400 mt-2">Estrategias de marketing y ventas que operan sin interrupciones..</p>
+                        <p class="text-gray-400 mt-2">Estrategias de marketing y ventas que operan sin interrupciones.</p>
                     </div>
                 </div>
             </div>
         </section>
-
+        
         <!-- Sección de Testimonios -->
         <section id="testimonios" class="py-16 md:py-24 bg-black-transparent">
             <div class="container mx-auto px-6 text-center">
