--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -155,7 +155,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#inicio" class="flex items-center">
-                    <img src="logo.webp" alt="Logo de Inovíxe" class="h-10 w-auto">
+                    <img src="1000176834.webp" alt="Logo de Inovíxe" class="h-10 w-auto">
                 </a>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
@@ -211,7 +211,7 @@
                 <h2 class="section-title text-center mb-12 fade-in-up">Sobre Nosotros</h2>
                 <div class="text-center max-w-4xl mx-auto fade-in-up">
                     <p class="text-lg text-gray-300 mb-6">
-                        Inovíxe es una agencia especializada en la intersección de la **Inteligencia Artificial** y el **Marketing Digital**. Nuestra misión es clara: crear valor tangible para nuestros clientes a través de soluciones tecnológicas que optimizan procesos, atraen clientes de calidad y escalan las ventas de manera predecible.
+                        Inovíxe es una agencia especializada en la intersección de la <strong>Inteligencia Artificial</strong> y el <strong>Marketing Digital</strong>. Nuestra misión es clara: crear valor tangible para nuestros clientes a través de soluciones tecnológicas que optimizan procesos, atraen clientes de calidad y escalan las ventas de manera predecible.
                     </p>
                     <p class="text-gray-400 mb-6">
                         Nuestro equipo está formado por expertos en IA, marketing, y desarrollo de negocio. Nos apasiona construir agentes autónomos para WhatsApp y voz, diseñar campañas de publicidad online altamente efectivas y crear funnels de venta que realmente funcionan.
@@ -339,7 +339,7 @@
                             <span class="text-inovixe-blue text-2xl font-bold">+</span>
                         </div>
                         <p id="faq1" class="mt-2 text-gray-300 hidden">
-                            El tiempo de implementación varía según la complejidad del proyecto, desde **1 a 12 meses**. Sin embargo, en nuestra primera llamada, te daremos un estimado claro y realista para tu caso particular.
+                            El tiempo de implementación varía según la complejidad del proyecto, desde <strong>1 a 12 meses</strong>. Sin embargo, en nuestra primera llamada, te daremos un estimado claro y realista para tu caso particular.
                         </p>
                     </div>
                     <!-- FAQ Item 2 -->
@@ -431,7 +431,7 @@
                     </svg>
                 </a>
             </div>
-            <p class="text-gray-400">&copy; 2024 Inovíxe. Todos los derechos reservados.</p>
+            <p class="text-gray-400">&copy; 2025 Inovíxe. Todos los derechos reservados.</p>
         </div>
     </footer>
     
