--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inovíxe - Agencia de IA y Marketing Digital</title>
-    <meta name="description" content="Inovíxe: Tu socio en inteligencia artificial y marketing digital. Transformamos tu negocio con automatizaciones, chatbots, funnels de venta y estrategias de crecimiento.">
+    <title>Inóvixe - Agencia de IA y Marketing Digital</title>
+    <meta name="description" content="Inóvixe: Tu socio en inteligencia artificial y marketing digital. Transformamos tu negocio con automatizaciones, chatbots, funnels de venta y estrategias de crecimiento.">
     <link rel="icon" type="image/webp" href="1000176834.webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -155,7 +155,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#inicio" class="flex items-center">
-                    <img src="1000176834.webp" alt="Logo de Inovíxe" class="h-10 w-auto">
+                    <img src="logo.webp" alt="Logo de Inóvixe" class="h-10 w-auto">
                 </a>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
@@ -211,12 +211,12 @@
                 <h2 class="section-title text-center mb-12 fade-in-up">Sobre Nosotros</h2>
                 <div class="text-center max-w-4xl mx-auto fade-in-up">
                     <p class="text-lg text-gray-300 mb-6">
-                        Inovíxe es una agencia especializada en la intersección de la <strong>Inteligencia Artificial</strong> y el <strong>Marketing Digital</strong>. Nuestra misión es clara: crear valor tangible para nuestros clientes a través de soluciones tecnológicas que optimizan procesos, atraen clientes de calidad y escalan las ventas de manera predecible.
+                        Inóvixe es una agencia especializada en la intersección de la <strong>Inteligencia Artificial</strong> y el <strong>Marketing Digital</strong>. Nuestra misión es clara: crear valor tangible para nuestros clientes a través de soluciones tecnológicas que optimizan procesos, atraen clientes de calidad y escalan las ventas de manera predecible.
                     </p>
                     <p class="text-gray-400 mb-6">
                         Nuestro equipo está formado por expertos en IA, marketing, y desarrollo de negocio. Nos apasiona construir agentes autónomos para WhatsApp y voz, diseñar campañas de publicidad online altamente efectivas y crear funnels de venta que realmente funcionan.
                     </p>
-                    <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Equipo+Inovíxe" alt="Foto del equipo Inovíxe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
+                    <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Equipo+Inóvixe" alt="Foto del equipo Inóvixe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
                         <div>
                             <p class="font-bold text-inovixe-blue">Misión:</p>
@@ -275,7 +275,7 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades</h2>
                 <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
-                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inovíxe, transformamos estos retos en vías para un crecimiento ilimitado.
+                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, transformamos estos retos en vías para un crecimiento ilimitado.
                 </p>
                 <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
                     <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
@@ -305,14 +305,14 @@
                     <!-- Testimonio 1 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center fade-in-up">
                         <img src="https://placehold.co/80x80/2b6cb0/ffffff?text=JP" alt="Foto de Juan Pérez" class="w-20 h-20 rounded-full mx-auto mb-4 border-2 border-inovixe-blue">
-                        <p class="italic text-gray-300 mb-4">"Inovíxe transformó mi negocio en meses. Su enfoque en la automatización con IA ha sido un cambio de juego para nosotros."</p>
+                        <p class="italic text-gray-300 mb-4">"Inóvixe transformó mi negocio en meses. Su enfoque en la automatización con IA ha sido un cambio de juego para nosotros."</p>
                         <p class="font-bold text-inovixe-blue">Juan Pérez</p>
                         <p class="text-sm text-gray-500">CEO, Tech Solutions</p>
                     </div>
                     <!-- Testimonio 2 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center fade-in-up" style="transition-delay: 0.1s;">
                         <img src="https://placehold.co/80x80/2b6cb0/ffffff?text=MA" alt="Foto de María Alva" class="w-20 h-20 rounded-full mx-auto mb-4 border-2 border-inovixe-blue">
-                        <p class="italic text-gray-300 mb-4">"Las campañas de publicidad en Meta que Inovíxe creó nos trajeron un retorno de inversión que superó todas nuestras expectativas. ¡Muy profesionales!"</p>
+                        <p class="italic text-gray-300 mb-4">"Las campañas de publicidad en Meta que Inóvixe creó nos trajeron un retorno de inversión que superó todas nuestras expectativas. ¡Muy profesionales!"</p>
                         <p class="font-bold text-inovixe-blue">María Alva</p>
                         <p class="text-sm text-gray-500">Fundadora, Marketing Pro</p>
                     </div>
@@ -365,7 +365,7 @@
                     <!-- FAQ Item 4 -->
                     <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq4')">
                         <div class="flex justify-between items-center">
-                            <h4 class="font-bold text-lg text-inovixe-blue">¿Cómo empezamos a trabajar con Inovíxe?</h4>
+                            <h4 class="font-bold text-lg text-inovixe-blue">¿Cómo empezamos a trabajar con Inóvixe?</h4>
                             <span class="text-inovixe-blue text-2xl font-bold">+</span>
                         </div>
                         <p id="faq4" class="mt-2 text-gray-300 hidden">
@@ -394,7 +394,7 @@
                 <div class="flex flex-col items-center">
                     <h3 class="font-bold text-2xl mb-4 fade-in-up">Solicita una Consulta Gratuita</h3>
                     <p class="text-center text-gray-400 mb-8 max-w-lg fade-in-up">
-                        Envíanos un mensaje y te contactaremos en menos de 60 minutos para discutir cómo Inovíxe puede transformar tu negocio.
+                        Envíanos un mensaje y te contactaremos en menos de 60 minutos para discutir cómo Inóvixe puede transformar tu negocio.
                     </p>
                     <form class="w-full max-w-md card p-8 rounded-2xl fade-in-up">
                         <div class="mb-4">
@@ -431,7 +431,7 @@
                     </svg>
                 </a>
             </div>
-            <p class="text-gray-400">&copy; 2025 Inovíxe. Todos los derechos reservados.</p>
+            <p class="text-gray-400">&copy; 2025 Inóvixe. Todos los derechos reservados.</p>
         </div>
     </footer>
     
