--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #000;
+            background: linear-gradient(to bottom, #ffffff, #2b6cb0);
             color: #fff;
             overflow-x: hidden;
             position: relative;
@@ -155,7 +155,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#inicio" class="flex items-center">
-                    <img src="1000176834.webp" alt="Logo de Inóvixe" class="h-10 w-auto">
+                    <img src="logo.webp" alt="Logo de Inóvixe" class="h-10 w-auto">
                 </a>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
