--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
         body {
             font-family: 'Inter', sans-serif;
-            background: linear-gradient(to bottom, #ffffff, #2b6cb0);
+            background-color: #000;
             color: #fff;
             overflow-x: hidden;
             position: relative;
