--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <a href="#inicio" class="flex items-center">
-                    <img src="logo.webp" alt="Logo de Inóvixe" class="h-10 w-auto">
+                    <img src="1000176834.webp" alt="Logo de Inóvixe" class="h-10 w-auto">
                 </a>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
@@ -194,10 +194,11 @@
             <div class="container mx-auto px-6 py-12 lg:py-24">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white leading-tight fade-in-up">
-                        Transformamos tu empresa con <span class="text-inovixe-blue">Inteligencia Artificial</span> y Marketing Innovador
+                        Especialistas en <span class="text-inovixe-blue">Inteligencia Artificial</span> para Transformar tu Negocio
                     </h1>
                     <p class="mt-6 text-lg sm:text-xl text-gray-400 max-w-2xl mx-auto fade-in-up" style="transition-delay: 0.2s;">
-                        La clave del éxito radica en combinar IA con marketing para optimizar operaciones, atraer leads cualificados y multiplicar ingresos de forma sostenible.
+                        Somos una agencia de IA que ofrece soluciones avanzadas, con servicios de marketing digital disponibles por separado o integrados para maximizar resultados.
+                    </p>
                     <div class="mt-12 fade-in-up" style="transition-delay: 0.4s;">
                         <a href="#contacto" class="btn-cta bg-inovixe-blue text-white text-lg hover:bg-inovixe-blue/90">Solicita una Consulta Gratuita</a>
                     </div>
@@ -211,20 +212,20 @@
                 <h2 class="section-title text-center mb-12 fade-in-up">Sobre Nosotros</h2>
                 <div class="text-center max-w-4xl mx-auto fade-in-up">
                     <p class="text-lg text-gray-300 mb-6">
-                        Inóvixe es una agencia especializada en la intersección de la <strong>Inteligencia Artificial</strong> y el <strong>Marketing Digital</strong>. Nuestra misión es clara: crear valor tangible para nuestros clientes a través de soluciones tecnológicas que optimizan procesos, atraen clientes de calidad y escalan las ventas de manera predecible.
+                        Inóvixe es una agencia especializada principalmente en <strong>Inteligencia Artificial</strong>, con servicios complementarios en <strong>Marketing Digital</strong>. Ofrecemos soluciones de IA independientes o combinadas con marketing para adaptarnos a tus necesidades, creando valor tangible mediante automatizaciones, análisis avanzados y optimización de procesos.
                     </p>
                     <p class="text-gray-400 mb-6">
-                        Nuestro equipo está formado por expertos en IA, marketing, y desarrollo de negocio. Nos apasiona construir agentes autónomos para WhatsApp y voz, diseñar campañas de publicidad online altamente efectivas y crear funnels de venta que realmente funcionan.
+                        Nuestro equipo de expertos en IA y marketing te ayuda a integrar estas tecnologías de manera flexible: elige solo IA, solo marketing, o una combinación poderosa para impulsar tu negocio.
                     </p>
                     <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Equipo+Inóvixe" alt="Foto del equipo Inóvixe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
                         <div>
                             <p class="font-bold text-inovixe-blue">Misión:</p>
-                            <p class="text-gray-400">Ser el socio estratégico que ayuda a las empresas a navegar la era digital, utilizando la IA como principal motor de crecimiento.</p>
+                            <p class="text-gray-400">Ser líderes en IA, ofreciendo marketing como complemento para guiar a las empresas en su transformación digital de forma personalizada.</p>
                         </div>
                         <div>
                             <p class="font-bold text-inovixe-blue">Visión:</p>
-                            <p class="text-gray-400">Crear un ecosistema de negocios rentables y automatizados en todo el mundo.</p>
+                            <p class="text-gray-400">Crear ecosistemas empresariales impulsados por IA, con integración opcional de marketing para un crecimiento global y eficiente.</p>
                         </div>
                     </div>
                 </div>
