--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         Inóvixe es una agencia especializada principalmente en <strong>Inteligencia Artificial</strong>, con servicios complementarios en <strong>Marketing Digital</strong>. Ofrecemos soluciones de IA independientes o combinadas con marketing para adaptarnos a tus necesidades, creando valor tangible mediante automatizaciones, análisis avanzados y optimización de procesos.
                     </p>
                     <p class="text-gray-400 mb-6">
-                        Nuestro equipo de expertos en IA y marketing te ayuda a integrar estas tecnologías de manera flexible: elige solo IA, solo marketing, o una combinación poderosa para impulsar tu negocio.
+                        Nuestro equipo de expertos en IA y marketing te ayuda a integrar estas tecnologías de manera flexible: elige solo IA, solo marketing, o una combinación poderosa de ambas para impulsar tu negocio.
                     </p>
                     <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Equipo+Inóvixe" alt="Foto del equipo Inóvixe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
@@ -246,8 +246,8 @@
                     <!-- Servicio 2 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.1s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.157 2.148.279 3.238.364.466.037 .893 .281 1.153.671L12 21l4.108-3.978c.26-.39.687-.634 1.153-.671 1.09-.085 2.17-.207 3.238-.364 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path></svg>
-                        <h3 class="font-bold text-xl mb-2">Agentes de inteligencia artificial WhatsApp, redes sociales y llamadas</h3>
-                        <p class="text-gray-400 text-center">Sistemas inteligentes que ofrecen soporte continuo y mejoran la interacción con clientes en todo momento.</p>
+                        <h3 class="font-bold text-xl mb-2">Agentes de IA para WhatsApp, Redes Sociales, Web y Llamadas</h3>
+                        <p class="text-gray-400 text-center">Implementamos agentes autónomos impulsados por inteligencia artificial que proporcionan atención al cliente 24/7, responden consultas automáticamente, gestionan interacciones en múltiples canales y optimizan las ventas directas para una experiencia fluida y eficiente.</p>
                     </div>
                     <!-- Servicio 3 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.2s;">
@@ -271,32 +271,32 @@
             </div>
         </section>
 
-    <!-- Sección Desafíos a Oportunidades -->
-        <section class="py-16 md:py-24 bg-black-transparent">
-            <div class="container mx-auto px-6 text-center">
-                <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades</h2>
-                <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
-                    ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, transformamos estos retos en vías para un crecimiento ilimitado.
-                </p>
-                <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
-                    <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <h4 class="font-bold text-xl">Problema: Techo de Crecimiento</h4>
-                        <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos.</p>
-                    </div>
-                    <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941"></path></svg>
-                        <h4 class="font-bold text-xl">Solución: Escala Ilimitada</h4>
-                        <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales para escalar sin límites.</p>
-                    </div>
-                    <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
-                        <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <h4 class="font-bold text-xl">Resultado: Presencia Constante</h4>
-                        <p class="text-gray-400 mt-2">Estrategias de marketing y ventas que operan sin interrupciones.</p>
-                    </div>
-                </div>
+   <!-- Sección Desafíos a Oportunidades -->
+<section class="py-16 md:py-24 bg-black-transparent">
+    <div class="container mx-auto px-6 text-center">
+        <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades con IA</h2>
+        <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
+            ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, integramos IA con estrategias de marketing para transformar estos retos en oportunidades de escalabilidad ilimitada y eficiencia operativa.
+        </p>
+        <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
+            <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                <h4 class="font-bold text-xl">Problema: Techo de Crecimiento</h4>
+                <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos y limitaciones en procesos manuales que restringen la expansión.</p>
             </div>
-        </section>
+            <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941"></path></svg>
+                <h4 class="font-bold text-xl">Solución: Escala Ilimitada con IA</h4>
+                <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales que automatizan procesos y potencian estrategias de marketing para un crecimiento sin barreras.</p>
+            </div>
+            <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                <h4 class="font-bold text-xl">Resultado: Presencia Constante</h4>
+                <p class="text-gray-400 mt-2">Estrategias impulsadas por IA y marketing que aseguran una presencia continua, abriendo posibilidades para aumentar ventas de manera orgánica y eficiente.</p>
+            </div>
+        </div>
+    </div>
+</section>
         
         <!-- Sección de Testimonios -->
         <section id="testimonios" class="py-16 md:py-24 bg-black-transparent">
