--- a/index.html
+++ b/index.html
@@ -328,55 +328,55 @@
             </div>
         </section>
         
-        <!-- Sección Preguntas Frecuentes -->
-        <section id="faq" class="py-16 md:py-24 bg-black-transparent">
-            <div class="container mx-auto px-6">
-                <h2 class="section-title text-center mb-12 fade-in-up">Preguntas Frecuentes</h2>
-                <div class="max-w-3xl mx-auto space-y-6 fade-in-up">
-                    <!-- FAQ Item 1 -->
-                    <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq1')">
-                        <div class="flex justify-between items-center">
-                            <h4 class="font-bold text-lg text-inovixe-blue">¿Cuánto tiempo toma implementar una solución de IA?</h4>
-                            <span class="text-inovixe-blue text-2xl font-bold">+</span>
-                        </div>
-                        <p id="faq1" class="mt-2 text-gray-300 hidden">
-                            El tiempo de implementación varía según la complejidad del proyecto, desde <strong>1 a 12 meses</strong>. Sin embargo, en nuestra primera llamada, te daremos un estimado claro y realista para tu caso particular.
-                        </p>
-                    </div>
-                    <!-- FAQ Item 2 -->
-                    <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq2')">
-                        <div class="flex justify-between items-center">
-                            <h4 class="font-bold text-lg text-inovixe-blue">¿Hay cláusulas de permanencia?</h4>
-                            <span class="text-inovixe-blue text-2xl font-bold">+</span>
-                        </div>
-                        <p id="faq2" class="mt-2 text-gray-300 hidden">
-                            No. Confiamos en la calidad y los resultados de nuestro trabajo. No tenemos contratos de permanencia forzada, ya que creemos que nuestros resultados son la mejor forma de fidelizar a nuestros clientes.
-                        </p>
-                    </div>
-                    <!-- FAQ Item 3 -->
-                    <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq3')">
-                        <div class="flex justify-between items-center">
-                            <h4 class="font-bold text-lg text-inovixe-blue">¿Ofrecen servicios a nivel mundial?</h4>
-                            <span class="text-inovixe-blue text-2xl font-bold">+</span>
-                        </div>
-                        <p id="faq3" class="mt-2 text-gray-300 hidden">
-                            ¡Sí! Nuestra agencia tiene alcance global. Operamos con clientes de todo el mundo y nos desplazamos a donde sea necesario para garantizar el éxito de nuestros proyectos.
-                        </p>
-                    </div>
-                    <!-- FAQ Item 4 -->
-                    <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq4')">
-                        <div class="flex justify-between items-center">
-                            <h4 class="font-bold text-lg text-inovixe-blue">¿Cómo empezamos a trabajar con Inóvixe?</h4>
-                            <span class="text-inovixe-blue text-2xl font-bold">+</span>
-                        </div>
-                        <p id="faq4" class="mt-2 text-gray-300 hidden">
-                            Es muy fácil. Simplemente rellena el formulario de contacto más abajo para solicitar una consulta gratuita. Te garantizamos una llamada en menos de 60 minutos para discutir tus necesidades y cómo podemos ayudarte.
-                        </p>
-                    </div>
+       <!-- Sección Preguntas Frecuentes -->
+<section id="faq" class="py-16 md:py-24 bg-black-transparent">
+    <div class="container mx-auto px-6">
+        <h2 class="section-title text-center mb-12 fade-in-up">Preguntas Frecuentes</h2>
+        <div class="max-w-3xl mx-auto space-y-6 fade-in-up">
+            <!-- FAQ Item 1 -->
+            <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq1')">
+                <div class="flex justify-between items-center">
+                    <h4 class="font-bold text-lg text-inovixe-blue">¿Cuánto tiempo toma implementar una solución de IA?</h4>
+                    <span class="text-inovixe-blue text-2xl font-bold">+</span>
                 </div>
+                <p id="faq1" class="mt-2 text-gray-300 hidden">
+                    El tiempo de implementación depende de la complejidad del proyecto, pero suele ser rápido ya que somos muy eficientes. De todas maneras, ese tiempo se define en la primera reunión.
+                </p>
             </div>
-        </section>
-
+            <!-- FAQ Item 2 -->
+            <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq2')">
+                <div class="flex justify-between items-center">
+                    <h4 class="font-bold text-lg text-inovixe-blue">¿Cuáles son los costos de nuestros servicios?</h4>
+                    <span class="text-inovixe-blue text-2xl font-bold">+</span>
+                </div>
+                <p id="faq2" class="mt-2 text-gray-300 hidden">
+                    Nuestros costos varían según el alcance del proyecto y las necesidades específicas del cliente. Ofrecemos paquetes personalizados y transparentes; contáctanos para un presupuesto detallado sin compromiso.
+                </p>
+            </div>
+            <!-- FAQ Item 3 -->
+            <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq3')">
+                <div class="flex justify-between items-center">
+                    <h4 class="font-bold text-lg text-inovixe-blue">¿Ofrecen servicios a nivel mundial?</h4>
+                    <span class="text-inovixe-blue text-2xl font-bold">+</span>
+                </div>
+                <p id="faq3" class="mt-2 text-gray-300 hidden">
+                    ¡Sí! Nuestra agencia tiene alcance global. Operamos con clientes de todo el mundo.
+                </p>
+            </div>
+            <!-- FAQ Item 4 -->
+            <div class="card p-6 rounded-xl cursor-pointer" onclick="toggleFAQ('faq4')">
+                <div class="flex justify-between items-center">
+                    <h4 class="font-bold text-lg text-inovixe-blue">¿Cómo empezamos a trabajar con Inóvixe?</h4>
+                    <span class="text-inovixe-blue text-2xl font-bold">+</span>
+                </div>
+                <p id="faq4" class="mt-2 text-gray-300 hidden">
+                    Es muy fácil. Simplemente rellena el formulario de contacto más abajo para solicitar una consulta gratuita. Te garantizamos una llamada en menos de 60 minutos para discutir tus necesidades y cómo podemos ayudarte.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+        
         <!-- CTA Final -->
         <section class="py-16 md:py-24 bg-inovixe-blue text-white text-center">
             <div class="container mx-auto px-6 fade-in-up">
