--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             </div>
         </section>
         
-       <!-- Sección Preguntas Frecuentes -->
+<!-- Sección Preguntas Frecuentes -->
 <section id="faq" class="py-16 md:py-24 bg-black-transparent">
     <div class="container mx-auto px-6">
         <h2 class="section-title text-center mb-12 fade-in-up">Preguntas Frecuentes</h2>
@@ -340,7 +340,7 @@
                     <span class="text-inovixe-blue text-2xl font-bold">+</span>
                 </div>
                 <p id="faq1" class="mt-2 text-gray-300 hidden">
-                    El tiempo de implementación depende de la complejidad del proyecto, pero suele ser rápido ya que somos muy eficientes. De todas maneras, ese tiempo se define en la primera reunión.
+                    El tiempo requerido para la implementación varía en función de la complejidad del proyecto, aunque generalmente es eficiente y rápido gracias a nuestros procesos optimizados. En cualquier caso, definimos un cronograma preciso durante la primera reunión.
                 </p>
             </div>
             <!-- FAQ Item 2 -->
@@ -350,7 +350,7 @@
                     <span class="text-inovixe-blue text-2xl font-bold">+</span>
                 </div>
                 <p id="faq2" class="mt-2 text-gray-300 hidden">
-                    Nuestros costos varían según el alcance del proyecto y las necesidades específicas del cliente. Ofrecemos paquetes personalizados y transparentes; contáctanos para un presupuesto detallado sin compromiso.
+                    Nuestros costos se adaptan al alcance del proyecto y a las necesidades específicas de cada cliente. Proporcionamos paquetes personalizados con total transparencia; contáctenos para obtener un presupuesto detallado sin compromiso.
                 </p>
             </div>
             <!-- FAQ Item 3 -->
@@ -370,7 +370,7 @@
                     <span class="text-inovixe-blue text-2xl font-bold">+</span>
                 </div>
                 <p id="faq4" class="mt-2 text-gray-300 hidden">
-                    Es muy fácil. Simplemente rellena el formulario de contacto más abajo para solicitar una consulta gratuita. Te garantizamos una llamada en menos de 60 minutos para discutir tus necesidades y cómo podemos ayudarte.
+                    Es muy sencillo. Complete el formulario de contacto a continuación para solicitar una consulta gratuita. Le garantizamos una respuesta en menos de 60 minutos para analizar sus requerimientos y cómo podemos asistirle.
                 </p>
             </div>
         </div>
