--- a/index.html
+++ b/index.html
@@ -388,38 +388,38 @@
             </div>
         </section>
 
-        <!-- Sección de Contacto y Formulario -->
-        <section id="contacto" class="py-16 md:py-24 bg-black-transparent">
-            <div class="container mx-auto px-6">
-                <h2 class="section-title text-center mb-12 fade-in-up">Contáctanos</h2>
-                <div class="flex flex-col items-center">
-                    <h3 class="font-bold text-2xl mb-4 fade-in-up">Solicita una Consulta Gratuita</h3>
-                    <p class="text-center text-gray-400 mb-8 max-w-lg fade-in-up">
-                        Envíanos un mensaje y te contactaremos en menos de 60 minutos para discutir cómo Inóvixe puede transformar tu negocio.
-                    </p>
-                    <form class="w-full max-w-md card p-8 rounded-2xl fade-in-up">
-                        <div class="mb-4">
-                            <label for="name" class="block text-gray-300 font-semibold mb-2">Nombre</label>
-                            <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="Tu Nombre" required>
-                        </div>
-                        <div class="mb-4">
-                            <label for="email" class="block text-gray-300 font-semibold mb-2">Email</label>
-                            <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="tu.email@ejemplo.com" required>
-                        </div>
-                        <div class="mb-4">
-                            <label for="phone" class="block text-gray-300 font-semibold mb-2">Teléfono</label>
-                            <input type="tel" id="phone" name="phone" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="+34 123 456 789">
-                        </div>
-                        <div class="mb-6">
-                            <label for="message" class="block text-gray-300 font-semibold mb-2">Mensaje</label>
-                            <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="Cuéntanos sobre tu proyecto..." required></textarea>
-                        </div>
-                        <button type="submit" class="btn-cta bg-inovixe-blue text-white w-full">Enviar Mensaje</button>
-                    </form>
+<!-- Sección de Contacto y Formulario -->
+<section id="contacto" class="py-16 md:py-24 bg-black-transparent">
+    <div class="container mx-auto px-6">
+        <h2 class="section-title text-center mb-12 fade-in-up">Contáctanos</h2>
+        <div class="flex flex-col items-center">
+            <h3 class="font-bold text-2xl mb-4 fade-in-up text-center">Solicita una Consulta Gratuita</h3>
+            <p class="text-center text-gray-400 mb-8 max-w-lg fade-in-up">
+                Envíanos un mensaje y te contactaremos en menos de 60 minutos para discutir cómo Inóvixe puede transformar tu negocio.
+            </p>
+            <form class="w-full max-w-md card p-8 rounded-2xl fade-in-up">
+                <div class="mb-4">
+                    <label for="name" class="block text-gray-300 font-semibold mb-2">Nombre</label>
+                    <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="Tu Nombre" required>
                 </div>
-            </div>
-        </section>
-    </main>
+                <div class="mb-4">
+                    <label for="email" class="block text-gray-300 font-semibold mb-2">Email</label>
+                    <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="tu.email@ejemplo.com" required>
+                </div>
+                <div class="mb-4">
+                    <label for="phone" class="block text-gray-300 font-semibold mb-2">Teléfono</label>
+                    <input type="tel" id="phone" name="phone" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="+34 123 456 789">
+                </div>
+                <div class="mb-6">
+                    <label for="message" class="block text-gray-300 font-semibold mb-2">Mensaje</label>
+                    <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="Cuéntanos sobre tu proyecto..." required></textarea>
+                </div>
+                <button type="submit" class="btn-cta bg-inovixe-blue text-white w-full">Enviar Mensaje</button>
+            </form>
+        </div>
+    </div>
+</section>
+</main>
 
     <!-- Footer -->
     <footer class="bg-black/90 py-12 border-t border-gray-800">
